[C][INDEX] change small introduction text

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
           <img class = "newappIcon" src="images/newapp-icon.png">
         </td>
         <td>
-          <h1 id="message">Hello World!</h1>
-          <p class='description'></p> Thanks for creating a <span class = "blue">NodeJS Starter Application</span>.
+          <h1 id="message">Epimovies</h1>
+          <p class='description'></p>L'application de recommandation de film au cinéma avec <span class = "blue">Allocine API</span>.
         </td>
       </tr>
     </table>
