[A][IMAGE] add logo epimovies to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <table>
       <tr>
         <td style= "width:30%;">
-          <img class = "newappIcon" src="images/newapp-icon.png">
+          <img class = "newappIcon" src="images/logo-epimovies.png">
         </td>
         <td>
           <h1 id="message">Epimovies</h1>
