--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script type="text/javascript" src="js/app.js"></script>
   </head>
 
   <body>
     <table>
       <tr>
         <td style= "width:30%;">
-          <img class = "newappIcon" src="images/newapp-icon.png">
+          <img class = "newappIcon" src="images/logo-epimovies.png">
         </td>
         <td>
           <h1 id="message">Epimovies</h1>
