--- a/public/angular.html
+++ b/public/angular.html
@@ -13,30 +13,47 @@
     <script src="js/hello_world_controller.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-<div class="ban">
-    <p style="color:black;">Profil</p>
-    <p style="color:black;">Se déconnecter</p>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <ul class="w3-navbar w3-light-grey">
+            <li class="w3-right"><a href="#">Se déconnecter</a></li>
+            <li class="w3-right"><a href="#">Profil</a></li>
+        </ul>
+        <div class="ban w3-display-container">
+            <img src="/images/ban_bobine.jpeg" class="w3-display-left w3-image w3-opacity" style="height:200px"/>
+            <img src="/images/logo-epimovies.png" class="w3-display-right w3-container w3-image"/>
+        </div>
+    </div>
 </div>
-<div class="content">
+<div class="content" ng-controller="MoviesCtrl">
     <div class="row">
-        <div class="col-md-9 col-md-offset-2">
-            <div ng-controller="MoviesCtrl">
-                <h1>Actuellement au cinéma</h1>
-                <div class="w3-card-4"
-                     style="width:40%; margin:10px; float: left;"
+        <div class="w3-header col-md-6 col-md-offset-3">
+            <h1>Actuellement au cinéma</h1>
+        </div>
+    </div>
+    <div class="w3-row">
+        <div style="margin-left:auto; margin-right:auto">
+            <div class="w3-col w3-container " style="width:20%"></div>
+            <div class="w3-col w3-container " style="width:70%">
+                <div class="w3-col m5 w3-card-2"
+                     style="margin:10px; float: left;"
                      ng-repeat=" n in [] | range:20">
-                    <header class="w3-container w3-theme">
+
+                    <header class="w3-container" style="height:64px">
                         <h4><b>{{greeting.results[n].original_title}}</b></h4>
                     </header>
+
                     <div class="w3-container">
                         <img ng-if="greeting.results[n].poster_path != null"
                              ng-src="https://image.tmdb.org/t/p/w185{{greeting.results[n].poster_path}}"
-                             class="w3-left" style="margin:10px;"/>
-                        <p style="padding:10px;">{{greeting.results[n].overview}}</p>
+                             class="w3-left" style="height:260px;margin:10px;"/>
+                        <p style="padding:10px; overflow:hidden; height:260px">{{greeting.results[n].overview}}</p>
+                        <a href="#">...</a>
                     </div>
 
                     <!--<img ng-if="greeting.results[n].backdrop_path != null" width="237"-->
