try add recommandation to front

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </td>
         <td>
           <h1 id="message">Epimovies</h1>
-          <p class='description'></p>L'application de recommandation de film au cinéma avec <span class = "blue">Allocine API</span>.
+          <p class='description'></p>L'application de recommandation de film au cinéma avec <span class = "blue">IMDB</span>.
         </td>
       </tr>
     </table>
