--- a/public/movies.html
+++ b/public/movies.html
@@ -54,8 +54,8 @@
                         <img ng-if="res[n].poster != null"
                              ng-src="{{res[n].poster}}"
                              class="w3-left" style="height:100px;margin:10px;"/>
-                        <p style="padding:10px; overflow:hidden; height:200px; font-size: small">{{res[n].plot}}</p>
-                        <a style="padding:10px;" href="#">...</a>
+                        <p style="padding:10px; overflow:hidden; height:100px; font-size: small">{{res[n].plot}}</p>
+                        <a style="padding:10px;" href="/movie.html">...</a>
                     </div>
 
                     <div class="rating" ng-controller="Like">
