--- a/public/profil.html
+++ b/public/profil.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </div>
-<div class="content" ng-controller="Recommendations">
+<div class="content">
     <div class="row">
         <div class="w3-header col-md-6 col-md-offset-5">
             <h1>Recommendations</h1>
@@ -41,7 +41,7 @@
         <div style="margin-left:auto; margin-right:auto">
             <div class="w3-col w3-container " style="width:20%"></div>
             <div class="w3-col w3-container " style="width:80%">
-                <div class="w3-col m5" style="margin: 10px; float:left">
+                <div class="w3-col m5" ng-controller="SocialRecommendations" style="margin: 10px; float:left">
                     <h3 style="text-align: center">Social recommendation</h3>
                     <div class="w3-col m12 w3-card-4"
                          style="margin:10px; float: left;"
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="w3-col m5" style="margin: 10px; float:left">
+                <div class="w3-col m5" ng-controller="SystemRecommendations" style="margin: 10px; float:left">
                     <h3 style="text-align: center">Personel recommendation</h3>
                     <div class="w3-col m12 w3-card-4"
                          style="margin:10px; float: left;"
